1/6/2021
- Added build functionality command