@@ -1,11 +1,10 @@
 #
-#   Copyright (C) 2021 Sellers Industry - All Rights Reserved
-#   Unauthorized copying of this file, via any medium is strictly
-#   prohibited. Proprietary and confidential.
+#   Copyright (C) 2021 Sellers Industry
+#   distributed under the MIT License
 #
 #   author: Evan Sellers <sellersew@gmail.com>
 #   date: Wed Jan 06 2021
-#   file: index.py
+#   file: __main__.py
 #   project: Bubble Gom (Go Manager)
 #   purpose: Go manager allows you to build go modules from anywhere
 #
