@@ -1,2 +1,6 @@
+1/8/2021
+- updated copyright banner on code
+- updated documation
+
 1/6/2021
 - Added build functionality command
